Refactor MCP tool annotations and add function descriptors; update CORS configuration